--- a/interface/icons.qrc
+++ b/interface/icons.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource>
+    <file>icons/mainIcon.png</file>
     <file>icons/add.png</file>
     <file>icons/export.png</file>
     <file>icons/remove.png</file>
