rgt command dialog fixes, initializations

--- a/interface/Ui_emExportDialog.ui
+++ b/interface/Ui_emExportDialog.ui
@@ -465,7 +465,7 @@
             </item>
             <item>
              <property name="text">
-              <string>Jacquard</string>
+              <string>Jaccard</string>
              </property>
             </item>
             <item>
