--- a/interface/Ui_emExportDialog.ui
+++ b/interface/Ui_emExportDialog.ui
@@ -96,7 +96,7 @@
         <locale language="English" country="UnitedStates"/>
        </property>
        <property name="title">
-        <string>Lineplot</string>
+        <string>Regions-to-Reads Tests</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
@@ -114,10 +114,10 @@
           <item row="0" column="1">
            <layout class="QHBoxLayout" name="horizontalLayout_3">
             <item>
-             <widget class="QLineEdit" name="WhereLineplot"/>
+             <widget class="QLineEdit" name="lpOutputLineEdit"/>
             </item>
             <item>
-             <widget class="QToolButton" name="WhereBrowserLineplot">
+             <widget class="QToolButton" name="lpOutputButton">
               <property name="text">
                <string>...</string>
               </property>
@@ -134,12 +134,12 @@
           <item row="1" column="0">
            <widget class="QLabel" name="label_5">
             <property name="text">
-             <string>Normalization:</string>
+             <string>Shared y-axis:</string>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QComboBox" name="normalization">
+           <widget class="QComboBox" name="lpSharedYComboBox">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -171,7 +171,7 @@
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QComboBox" name="column">
+           <widget class="QComboBox" name="lpColumnComboBox">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -203,7 +203,7 @@
            </widget>
           </item>
           <item row="3" column="1">
-           <widget class="QComboBox" name="row">
+           <widget class="QComboBox" name="lpRowComboBox">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -235,7 +235,7 @@
            </widget>
           </item>
           <item row="4" column="1">
-           <widget class="QComboBox" name="color">
+           <widget class="QComboBox" name="lpColorComboBox">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -280,7 +280,7 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QPushButton" name="runLineplot">
+           <widget class="QPushButton" name="lpRunButton">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -351,7 +351,7 @@
      <item>
       <widget class="QGroupBox" name="groupBox_2">
        <property name="title">
-        <string>Association Tests</string>
+        <string>Regions-to-Regions Tests</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
@@ -372,10 +372,10 @@
           <item row="0" column="1">
            <layout class="QHBoxLayout" name="horizontalLayout_6">
             <item>
-             <widget class="QLineEdit" name="WhereTests"/>
+             <widget class="QLineEdit" name="atOutputLineEdit"/>
             </item>
             <item>
-             <widget class="QToolButton" name="WhereBrowserTests">
+             <widget class="QToolButton" name="atOutputButton">
               <property name="text">
                <string>...</string>
               </property>
@@ -399,10 +399,10 @@
           <item row="1" column="1">
            <layout class="QHBoxLayout" name="horizontalLayout_7">
             <item>
-             <widget class="QLineEdit" name="input"/>
+             <widget class="QLineEdit" name="atInputLineEdit"/>
             </item>
             <item>
-             <widget class="QToolButton" name="inputBrowser">
+             <widget class="QToolButton" name="atInputButton">
               <property name="text">
                <string>...</string>
               </property>
@@ -424,7 +424,7 @@
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QComboBox" name="inputType">
+           <widget class="QComboBox" name="atInputTypeComboBox">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -451,7 +451,7 @@
            </widget>
           </item>
           <item row="3" column="1">
-           <widget class="QComboBox" name="testType">
+           <widget class="QComboBox" name="atTestComboBox">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -483,7 +483,7 @@
            </widget>
           </item>
           <item row="4" column="1">
-           <widget class="QComboBox" name="groupBy">
+           <widget class="QComboBox" name="atGroupByComboBox">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -493,16 +493,6 @@
             <item>
              <property name="text">
               <string>None</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Regions</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Reads</string>
              </property>
             </item>
            </widget>
@@ -515,7 +505,7 @@
            </widget>
           </item>
           <item row="5" column="1">
-           <widget class="QSpinBox" name="randomization">
+           <widget class="QSpinBox" name="atRandomizationSpinBox">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -551,7 +541,7 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QPushButton" name="runTests">
+           <widget class="QPushButton" name="atRunButton">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -649,8 +639,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>257</x>
-     <y>572</y>
+     <x>1160</x>
+     <y>680</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -665,8 +655,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>325</x>
-     <y>572</y>
+     <x>1160</x>
+     <y>680</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
